--- a/JDB_Development.css
+++ b/JDB_Development.css
@@ -28,14 +28,17 @@ header {
     top: 0;
     z-index: 999;
     background-color: white;
+    box-shadow: 0 0 15px 0 black;
+    border-bottom: 2px solid gold;
 }
+
 
 .icon {
     display: none;
 }
 
 .logo {
-    width: 17%;
+    width: 20%;
 }
 
 .logo img {
@@ -50,20 +53,59 @@ header {
 }
 
 #menu ul li {
-    display: inline;
+    /* display: inline; */
+    display: inline-flex;
     margin: 0px 9px;
+    transition: 0.3 ease-out;
+}
+
+#menu ul li:hover {
+    transform: translate(0px, -3px);
 }
 
 #menu ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 #menu ul a {
     text-decoration: none;
     color: black;
+    font-weight: 600;
+    transition: 0.3s;
+    position: relative;
 }
+
+#menu ul a::before {
+    position: absolute;
+    content: "";
+    width: 0;
+    bottom: -15px;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background: brown;
+    margin: auto;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+}
+
+#menu ul a:hover {
+    color: brown;
+
+}
+
+#menu ul a:hover::before {
+    opacity: 1;
+    visibility: visible;
+    width: 100%;
+    transform: translate(0, -5px);
+}
+
+
 
 /* ....................................Home ...................................... */
 .text-top {
@@ -162,13 +204,15 @@ header {
     #menu {
         position: absolute;
         background: white;
-        top: 89px;
+        top: 56px;
         left: 0;
         width: 100%;
         box-shadow: 0px 0px 18px 2px rgba(0, 0, 0, 0.5);
         transform: translateX(-1400px);
         transition: 0.5s;
     }
+
+
 
     #menu ul li {
         display: block;
@@ -215,7 +259,7 @@ header {
     #menu {
         position: absolute;
         background: white;
-        top: 89px;
+        top: 56px;
         left: 0;
         width: 100%;
         box-shadow: 0px 0px 18px 2px rgba(0, 0, 0, 0.5);
