--- a/JDB_Development.css
+++ b/JDB_Development.css
@@ -308,7 +308,7 @@ header {
     text-align: center;
 }
 
-section#\ Special-section {
+section #Special-section {
     background: transparent;
     background-image: linear-gradient(180deg, #EFFAFF 0%, #FFFFFF 100%);
     padding: 60px;
