--- a/JDB_Development.css
+++ b/JDB_Development.css
@@ -272,6 +272,10 @@ header {
         margin: 11px 10px;
     }
 
+    .Best_content_img {
+        padding: 0px !important;
+    }
+
     .logo {
         width: 50%;
     }
@@ -300,6 +304,10 @@ header {
     .text-in h2 {
         color: #F0C709;
         font-size: 16px;
+    }
+
+    .col.Digital {
+        margin: 30px 35px !important;
     }
 }
 
@@ -560,6 +568,19 @@ section #Special-section {
     /* margin-right: 15px; */
 }
 
+.digital_box_head {
+    display: flex;
+    align-items: center;
+    padding: 15px 0px;
+    border-bottom: 1px solid white;
+    /* justify-content: center; */
+    letter-spacing: 0.4px;
+    font-size: 20px;
+    font-weight: 600;
+    color: gold;
+    /* margin-right: 15px; */
+}
+
 .digital_box_icon {
     color: gold;
     padding: 0px 10px;
@@ -571,6 +592,8 @@ section #Special-section {
     /* font-weight: 600; */
     letter-spacing: 0.4px;
 }
+
+
 
 .digital_marketing_bottom h4 {
     margin: 50px 0px 30px 0px;
@@ -980,46 +1003,63 @@ button.Our_Students_btn:hover {
 }
 
 
-.meet_img1 img,
-.meet_img2 img {
+.meet_img1 img {
     width: 100%;
     border-radius: 20px;
 }
 
-
-
-/* .................................Digital Marketing Platforms.................... */
-.Digital_marketing_tool {
-    margin-top: 30px;
+.in-box {
+    background: white;
+    padding: 10px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 5px;
 }
 
-.Digital_tool_text {
-    text-align: center;
-    margin-bottom: 70px;
+.in-img {
+    padding: 50px 0px;
 }
 
-.Digital_tool_text h1 {
-    font-weight: 700;
-    padding-bottom: 0;
-    margin: 0;
+.in-img img {
+    border: 3px solid yellow;
+    height: 300px;
+
 }
 
-.Digital_tool_text h4 {
-    color: #E1B901;
-    font-weight: 700;
-    padding-bottom: 40px;
+.in-box-img {
+    display: flex;
+    align-items: center;
 }
 
-.Digital_tool_text p {
-    /* font-size: 18px; */
-    font-weight: 600;
-    letter-spacing: 0.2px;
-}
-
-.Digital_tool_image img {
+.in-box-img,
+.in-meet-text {
     width: 100%;
-    border-radius: 30px;
 }
+
+.in-box-img img {
+    width: 36%;
+    background: black;
+    border-radius: 100%;
+    height: 100px;
+    object-fit: cover;
+    margin: 0px 15px 0px 0px;
+}
+
+.in-meet-text p {
+    font-size: 10px;
+}
+
+.in-box-img-text h3 {
+    font-size: 16px;
+    margin: 0px 0px 0px 0px;
+    font-weight: 600;
+}
+
+.in-box-img-text span {
+    font-size: 14px;
+    color: #b8b1b1;
+}
+
 
 
 
@@ -1042,8 +1082,8 @@ button.Our_Students_btn:hover {
 
 .slider-img1 img {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 220PX;
+    height: 300PX;
     border: 2px solid black;
 
 }
@@ -1135,8 +1175,9 @@ button.Marketing_certificate_btn:hover {
 .slider-img2 img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 300px;
     border: 2px solid black;
+    object-fit: cover;
 
 }
 
